logs/dag_id=main_dag/run_id=manual__2022-10-01T172348.550814+0000/task_id=create_fct_table/attempt=1.log
[2022-10-01 17:25:02,646] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_fct_table manual__2022-10-01T17:23:48.550814+00:00 [queued]>
[2022-10-01 17:25:02,659] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: main_dag.create_fct_table manual__2022-10-01T17:23:48.550814+00:00 [queued]>
[2022-10-01 17:25:02,659] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 17:25:02,659] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-10-01 17:25:02,660] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-10-01 17:25:02,678] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_fct_table> on 2022-10-01 17:23:48.550814+00:00
[2022-10-01 17:25:02,684] {standard_task_runner.py:52} INFO - Started process 225 to run task
[2022-10-01 17:25:02,689] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'main_dag', 'create_fct_table', 'manual__2022-10-01T17:23:48.550814+00:00', '--job-id', '16', '--raw', '--subdir', 'DAGS_FOLDER/main_dag.py', '--cfg-path', '/tmp/tmpgz0_9vl7', '--error-file', '/tmp/tmpn68hp6nw']
[2022-10-01 17:25:02,691] {standard_task_runner.py:80} INFO - Job 16: Subtask create_fct_table
[2022-10-01 17:25:02,776] {task_command.py:369} INFO - Running <TaskInstance: main_dag.create_fct_table manual__2022-10-01T17:23:48.550814+00:00 [running]> on host 01cada5d86cb
[2022-10-01 17:25:02,940] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=main_dag
AIRFLOW_CTX_TASK_ID=create_fct_table
AIRFLOW_CTX_EXECUTION_DATE=2022-10-01T17:23:48.550814+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-10-01T17:23:48.550814+00:00
[2022-10-01 17:25:02,956] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-10-01 17:25:02,961] {dbapi.py:208} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS fct_table (
                Market_Cap TEXT NOT NULL,
                Last_Price TEXT NOT NULL,
                Price–earnings_ratio_(PE) TEXT NOT NULL,
                Dividend_yield_(DY) TEXT NOT NULL,
                Return_on_equity_(ROE) TEXT NOT NULL,
                Company_Key TEXT NOT NULL,
                Stock_Key TEXT NOT NULL
            );
        , parameters: None
[2022-10-01 17:25:02,962] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 5:                 Price–earnings_ratio_(PE) TEXT NOT NULL,
                                             ^

[2022-10-01 17:25:02,975] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=main_dag, task_id=create_fct_table, execution_date=20221001T172348, start_date=20221001T172502, end_date=20221001T172502
[2022-10-01 17:25:02,991] {standard_task_runner.py:97} ERROR - Failed to execute job 16 for task create_fct_table (syntax error at or near "("
LINE 5:                 Price–earnings_ratio_(PE) TEXT NOT NULL,
                                             ^
; 225)
[2022-10-01 17:25:03,024] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-10-01 17:25:03,095] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
